HWPI base and Classic theme: multiple bug fixes/tweaks--reduced space below menu in header reg, 2 font spacing issues on people pages, etc. #1705

--- a/themes/hwpi_basetheme/css/hwpi.base.css
+++ b/themes/hwpi_basetheme/css/hwpi.base.css
@@ -417,8 +417,8 @@ ol.search-results li.search-result:last-child {
 }
 
 .node-type-person .node-person .field-name-field-professional-title {
-  padding-top: 10px;
-  margin-top: -20px;
+  padding: 10px 0 20px;
+  margin-top: -17px;
 }
 
 .node-type-person .node-person .pic-bio {
@@ -480,7 +480,6 @@ ol.search-results li.search-result:last-child {
 }
 
 .node-teaser.node-person {
-  line-height: 19px;
   padding: 15px 0 30px;
 }
 
