--- a/themes/hwpi_basetheme/css/hwpi.nav.css
+++ b/themes/hwpi_basetheme/css/hwpi.nav.css
@@ -74,6 +74,7 @@ ul.nice-menu ul {
 /* Action Nav Header 3rd*/
 .region-header-third ul.menu {
 	float:right;
+	margin-bottom: 1em;
 }
 
 .region-header-third ul.nice-menu {
