--- a/themes/hwpi_basetheme/css/hwpi.widgets.css
+++ b/themes/hwpi_basetheme/css/hwpi.widgets.css
@@ -19,7 +19,7 @@
 }
 
 #boxes-box-site_info h1 {
-  top: 50px
+  top: 42px
 }
 
 #boxes-box-site_info h2 {
@@ -551,7 +551,7 @@ table td.mini .mini-day-on a {
 
 .views-slideshow-controls-bottom {
   position:absolute;
-  top:230px;
+  top:220px;
   left:70px;
   z-index:25;
   line-height:0;
