--- a/themes/hwpi_classic/css/hwpi_classic.css
+++ b/themes/hwpi_classic/css/hwpi_classic.css
@@ -152,3 +152,14 @@ padding: 10px 0;
 	font-size: 16px;
 }
 
+#footer ul.menu li.menuparent {
+
+    font-weight: bold;
+
+}
+
+#footer ul.menu li.menuparent ul li {
+
+    font-weight: normal;
+
+}
